Create controller Cards and model Card

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
         <ul class="nav navbar-nav navbar-right navigation-links">
           <li>
-            <%= link_to "Все карточки", '#' %>
+            <%= link_to "Все карточки", cards_path %>
           </li>
           <li>
             <%= link_to "Добавить карточку", '#' %>
