--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
           </li>
           <% if current_user %>
             <li>
-              <%= link_to "Правка профиля", edit_user_path(current_user.id) %>
+              <%= link_to "Правка профиля", edit_profile_path %>
             </li>
             <li>
               <%= link_to "Выйти", :logout, method: :post %>
