--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for card do |f| %>
   <%= f.input :original_text, label: "Исходный текст" %>
   <%= f.input :translated_text, label: "Перевод" %>
+  <%= f.association :deck, include_blank: false %>
   <%= f.input :picture, as: :file %>
   <%= f.button :submit %>
 <% end %>
