--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
   <section id="container">
 
-  <%= render "layouts/navbar" %>
+  <%= render "shared/navbar" %>
 
     <section>
       <div>
