--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,10 +16,10 @@
       <li><%= link_to "Добавить карточку", new_card_path %></li>
       <% if current_user %>
         <li><%= link_to "Правка профиля", edit_profile_path %></li>
-        <li><%= link_to "Выйти", :logout, method: :post %></li>
+        <li><%= link_to "Выйти", :logout, method: :delete %></li>
       <% else %>
-        <li><%= link_to "Зарегистрироваться", :signup %></li>
-        <li><%= link_to 'Login with Twitter', auth_at_provider_path(:provider => :twitter) %></li>
+        <li><%= link_to "Зарегистрироваться", signup_path %></li>
+        <li><%= link_to 'Login with Twitter', auth_at_provider_path(provider: :twitter) %></li>
         <li><%= link_to "Войти", :login %></li>
       <% end %>
     </ul>
