--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -1,8 +1,8 @@
 <%= simple_form_for card do |f| %>
-  <%= f.input :original_text, label: "Исходный текст" %>
-  <%= f.input :translated_text, label: "Перевод" %>
-  <%= f.association :deck %>
-  or create_one: 
+  <%= f.input :original_text %>
+  <%= f.input :translated_text %>
+  <%= f.input :deck_id, collection: current_user.decks %>
+  <%= t(:or_create_one) %>
   <%= text_field_tag :new_deck_name %>
   <%= f.input :picture, as: :file %>
   <%= f.button :submit %>
