--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,11 +1,11 @@
-<h1>Все карточки</h1>
+<h1><%= t('.title') %></h1>
   <table class="table table-striped">
     <tr>
-      <th>Оriginal_text</th>
-      <th>Translated_text</th>
-      <th>Review date</th>
-      <th>Deck</th>
-      <th>Action</th>
+      <th><%= t(:original_text) %></th>
+      <th><%= t(:translated_text)%></th>
+      <th><%= t(:review_date) %></th>
+      <th><%= t(:deck) %></th>
+      <th><%= t(:actions) %></th>
     </tr>
 
     <% @cards.each do |card| %>
@@ -15,8 +15,8 @@
         <td><%= card.review_date.strftime("%d/%m/%Y") %></td>
         <td><%= card.deck.name %></td>
         <td>
-          <%= link_to "Edit", edit_card_path(card) %>
-          <%= link_to "Destroy", card, method: :delete, data: { confirm: 'Are you sure?'} %>
+          <%= link_to t(:edit), edit_card_path(card) %>
+          <%= link_to t(:destroy), card, method: :delete, data: { confirm: 'Are you sure?'} %>
         </td>
       </tr>
     <% end %>
