--- a/app/views/decks/_form.html.erb
+++ b/app/views/decks/_form.html.erb
@@ -1,4 +1,4 @@
 <%= simple_form_for deck do |f| %>
-  <%= f.input :name, label: "Название колоды" %>
+  <%= f.input :name %>
   <%= f.button :submit %>
 <% end %>
