--- a/app/views/profile/edit.html.erb
+++ b/app/views/profile/edit.html.erb
@@ -3,5 +3,6 @@
   <%= f.input :email %>
   <%= f.input :password %>
   <%= f.input :password_confirmation %>
-  <%= f.button :submit, "Сохранить изменения" %>
+  <%= f.input :locale, collection: I18n.available_locales, include_blank: false %>
+  <%= f.button :submit %>
 <% end %>
