--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,25 +2,37 @@
   <div class="container-fluid">
         
     <div class="navbar-header">
-      <%= link_to 'Флешкарточкер', root_path, class: "navbar-brand" %>
+      <%= link_to t('.title'), root_path, class: "navbar-brand" %>
     </div>
     <ul class="nav navbar-nav navbar-right navigation-links">
       <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Колоды<span class="caret"></span></a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"><%= t('.decks') %>
+        <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><%= link_to "Все колоды", decks_path %></li>
-          <li><%= link_to "Добавить колоду", new_deck_path %></li>
+          <li><%= link_to t('.all_decks'), decks_path %></li>
+          <li><%= link_to t('.add_deck'), new_deck_path %></li>
         </ul>
       </li>
-      <li><%= link_to "Все карточки", cards_path %></li>
-      <li><%= link_to "Добавить карточку", new_card_path %></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"><%= t('.cards') %>
+        <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><%= link_to t('.all_cards'), cards_path %></li>
+          <li><%= link_to t('.add_card'), new_card_path %></li>
+        </ul>
+      </li>
       <% if current_user %>
-        <li><%= link_to "Правка профиля", edit_profile_path %></li>
-        <li><%= link_to "Выйти", logout_path, method: :delete %></li>
+        <li><%= link_to t('.edit_profile'), edit_profile_path %></li>
+        <li><%= link_to t('.logout'), logout_path, method: :delete %></li>
       <% else %>
-        <li><%= link_to "Зарегистрироваться", signup_path %></li>
-        <li><%= link_to 'Login with Twitter', auth_at_provider_path(provider: :twitter) %></li>
-        <li><%= link_to "Войти", login_path %></li>
+        <li><%= link_to t('.signup'), signup_path %></li>
+        <li><%= link_to t('.signup_twitter'), auth_at_provider_path(provider: :twitter) %></li>
+        <li><%= link_to t('.login'), login_path %></li>
+        <% if I18n.locale == I18n.default_locale %>
+          <li><%= link_to "EN", locale: 'en' %></li>
+        <% else %>
+          <li><%= link_to "RU", locale: 'ru' %></li>
+        <% end %>
       <% end %>
     </ul>
         
