--- a/app/views/decks/index.html.erb
+++ b/app/views/decks/index.html.erb
@@ -1,7 +1,7 @@
 <h1><%= t(".title") %></h1>
   <table class="table table-striped">
     <tr>
-      <th><%= t(:name_deck) %></th>
+      <th><%= t(:deck_name) %></th>
       <th><%= t(:actions) %></th>
     </tr>
 
