--- a/app/views/reviews/new.js.erb
+++ b/app/views/reviews/new.js.erb
@@ -1,2 +1,3 @@
+$('#review_form').html("<%= j (render 'form', review: @review) %>");
 $('#notice_panel').html("<%= j (render 'shared/flash') %>");
 startTimer();
