--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -2,6 +2,6 @@
   <%= t('.title') %>
 </p>
 
-<div id="review_form">
-<%= render "form", review: @review %>
+<div id="review">
+  <%= render "form", review: @review %>
 </div>
